# interop-codegen-examples

./: .gitignore  .gitmodules  CMakeLists.txt  CppSharpTest.sln  README.md  cppsharp-build.ps1  native-swig-build.ps1  sharpgen-build.ps1  tooling-comparison.md
CppSharpGenerator/: CppSharpGenerator.csproj  Program.cs  TestLibrary.cs
CppSharpWrapperLibrary/: CppSharpWrapperLibrary.csproj
CppSharpWrapperLibraryNative/: CMakeLists.txt
Native/: CMakeLists.txt  Native.cpp  Native.h
Native/SWIG/: CMakeLists.txt  mapping.i
SharpGen/: Mapping.xml  SharpGen.csproj
SwigWrapperLibrary/: SwigWrapperLibrary.csproj
